Stop nav items wrapping between words

--- a/src/scss/mixin/_nav.scss
+++ b/src/scss/mixin/_nav.scss
@@ -31,6 +31,7 @@
 @mixin nav--inline {
     display: flex;
     flex-wrap: wrap;
+    white-space: nowrap;
 }
 
 
